<resources>
    <string name="Basic_01">Creature named Batmong holding a bat</string>
    <string name="PREF_KEY_CLEAR_DATA">pref_key_clear_data</string>
    <string name="PREF_KEY_DEACTIVATE_TEST_MODE">pref_key_deactivate_test_mode</string>
    <string name="PREF_KEY_TEST_AD_FORCE_REQUEST_VIDEO">pref_key_test_ad_force_request_video</string>
    <string name="PREF_KEY_TEST_AD_IGNORE_REQUEST">pref_key_test_ad_ignore_request</string>
    <string name="PREF_KEY_TEST_AD_OPEN_LIB_SETTING">pref_key_test_ad_open_lib_setting</string>
    <string name="PREF_KEY_TEST_ALARM_INTERVAL_TEXT">pref_key_test_alarm_interval_text</string>
    <string name="PREF_KEY_TEST_CHECK_NETWORK_PARAM">pref_key_test_check_network_param</string>
    <string name="PREF_KEY_TEST_CLEAR_ACCESS_TOKEN">pref_key_test_clear_access_token</string>
    <string name="PREF_KEY_TEST_CLEAR_CACHE">pref_key_test_clear_cache</string>
    <string name="PREF_KEY_TEST_CLOUDGAME_RESTORE_BEGIN">pref_key_test_cloudgame_restore_begin</string>
    <string name="PREF_KEY_TEST_CLOUDGAME_RESTORE_CALL_DELETE">pref_key_test_cloudgame_restore_call_delete</string>
    <string name="PREF_KEY_TEST_CLOUDGAME_RESTORE_PACKAGE_NAME">pref_key_test_cloudgame_restore_package_name</string>
    <string name="PREF_KEY_TEST_CLOUDGAME_RESTORE_SHOW_HISTORY">pref_key_test_cloudgame_restore_show_history</string>
    <string name="PREF_KEY_TEST_CLOUDGAME_RESTORE_WITH_FILE_OPEN">pref_key_test_cloudgame_restore_with_file_open</string>
    <string name="PREF_KEY_TEST_ENABLE_GALAXYAPPS_TEST">pref_key_test_enable_galaxyapps_test</string>
    <string name="PREF_KEY_TEST_ENABLE_GMP_TEST">pref_key_test_enable_gmp_test</string>
    <string name="PREF_KEY_TEST_ENABLE_INSTANT_PLAYS_TEST">pref_key_test_enable_instant_plays_test</string>
    <string name="PREF_KEY_TEST_ENABLE_NETWORK_LOGGING">pref_key_test_enable_network_logging</string>
    <string name="PREF_KEY_TEST_EXPORT_NETWORK_LOG">pref_key_test_export_network_log</string>
    <string name="PREF_KEY_TEST_EXTRACT_GAME_APK">pref_key_test_extract_game_apk</string>
    <string name="PREF_KEY_TEST_NETWORK_CALL_COUNT_MANAGER">pref_key_test_network_call_count_manager</string>
    <string name="PREF_KEY_TEST_OPEN_APP_DATA_FOLDER">pref_key_test_open_app_data_folder</string>
    <string name="PREF_KEY_TEST_REMOVE_NETWORK_LOG">pref_key_test_remove_network_log</string>
    <string name="PREF_KEY_TEST_SELECT_SERVER">pref_key_test_select_server</string>
    <string name="PREF_KEY_TEST_STATE_FORCE_APP_HIDDEN_DIALOG">pref_key_test_state_force_app_hidden_dialog</string>
    <string name="PREF_KEY_TEST_STATE_FORCE_APP_UPDATE">pref_key_test_state_force_app_update</string>
    <string name="PREF_KEY_TEST_STATE_MUTE_GAME_GUIDE">pref_key_test_state_mute_game_guide</string>
    <string name="PREF_KEY_TEST_STATE_WELCOME_TNC">pref_key_test_state_welcome_tnc</string>
    <string name="PREF_KEY_TEST_UNINSTALL_GAMELAUNCHER">pref_key_test_uninstall_gamelauncher</string>
    <string name="PREF_KEY_TEST_UPLOAD_DAILY_PLAYTIME">pref_key_test_upload_daily_playtime</string>
    <string name="PREF_KEY_TEST_UPLOAD_PLAYTIME">pref_key_test_upload_playtime</string>
    <string name="PREF_KEY_UUID">pref_key_uuid</string>
    <string name="PREF_KEY_VERSION">pref_key_version</string>
    <string name="add_shortcut">Add shortcut</string>
    <string name="bookmark_title">Bookmarks</string>
    <string name="contact_us_title">Contact Us</string>
    <string name="detail_share">Share</string>
    <string name="library_quick_option_uninstall">Uninstall</string>
    <string name="library_settings_preference_key_image_description_dummy">library_settings_preference_key_image_description_dummy</string>
    <string name="library_settings_preference_key_radio_button_first_dummy">library_settings_preference_key_radio_button_first_dummy</string>
    <string name="library_settings_preference_key_radio_button_second_dummy">library_settings_preference_key_radio_button_second_dummy</string>
    <string name="main_home_my_games_card_header">My Games</string>
    <string name="more_menu_title_community">@string/community_title</string>
    <string name="more_menu_title_game_booster">@string/game_booster_title</string>
    <string name="more_menu_title_game_notification">@string/notificationlist_title</string>
    <string name="more_menu_title_game_plugins">@string/game_plugins_title</string>
    <string name="more_menu_title_notice">@string/announcement_header</string>
    <string name="more_menu_title_promotions">@string/promotions_title</string>
    <string name="more_menu_title_settings">@string/settings_top_title</string>
    <string name="more_menu_title_test_settings">Test Settings</string>
    <string name="notification_settings_preference_key_description_dummy">notification_settings_preference_description_dummy</string>
    <string name="notification_settings_preference_key_radio_button_first_dummy">notification_settings_preference_key_radio_button_first_dummy</string>
    <string name="notification_settings_preference_key_radio_button_second_dummy">notification_settings_preference_key_radio_button_second_dummy</string>
    <string name="notification_settings_preference_key_radio_button_third_dummy">notification_settings_preference_key_radio_button_third_dummy</string>
    <string name="notificationlist_both">Both</string>
    <string name="notificationlist_in_game_launcher">In Gaming Hub</string>
    <string name="notificationlist_in_the_notification_panel">In the notification panel</string>
    <string name="notificationlist_manage_game_notifications_description">Choose where to get your game notifications.</string>
    <string name="samsung_account_locale_default">Samsung account</string>
    <string name="settings_about_game_launcher">About Gaming Hub</string>
    <string name="settings_ads_notice">Ads Privacy Notice</string>
    <string name="settings_ads_settings">Ads Privacy</string>
    <string name="settings_ads_subheader">Ads</string>
    <string name="settings_autoplay_videos_using_mobile_data">Autoplay videos using mobile data</string>
    <string name="settings_data_processing_title">Data processing and sharing for marketing purposes</string>
    <string name="settings_display_game_apps_both">In Gaming Hub and the Home and Apps screens</string>
    <string name="settings_display_game_apps_game_launcher_only">In Gaming Hub only</string>
    <string name="settings_erase_personal_data">Erase personal data</string>
    <string name="settings_get_news_and_special_offers">Get news and special offers</string>
    <string name="settings_hide_games_on_home_and_apps_title">Show game apps</string>
    <string name="settings_ip2_auto_hybrid">Save your play in cloud games</string>
    <string name="settings_ip2_auto_hybrid_summary">Cloud games will be automatically installed so you can continue where you left off.</string>
    <string name="settings_marketing_information">Get news and special offers</string>
    <string name="settings_notification">Notifications</string>
    <string name="settings_other_category_title">Other</string>
    <string name="settings_permissions">Permissions</string>
    <string name="settings_preference_category_key_ads">pref_category_key_ads</string>
    <string name="settings_preference_key_about">pref_key_about_game_launcher</string>
    <string name="settings_preference_key_ads_notice">pref_key_ads_notice</string>
    <string name="settings_preference_key_ads_settings">pref_key_ads_settings</string>
    <string name="settings_preference_key_autoplay_videos_using_mobile_data">pref_key_auto_play_videos_using_mobile_data</string>
    <string name="settings_preference_key_contact_us">pref_key_contact_us</string>
    <string name="settings_preference_key_empty">pref_key_empty</string>
    <string name="settings_preference_key_erase_personal_data">pref_key_erase_personal_data_game_launcher</string>
    <string name="settings_preference_key_hide_games">game_home_hidden_games</string>
    <string name="settings_preference_key_ip2_auto_hybrid_setting">pref_key_ip2_auto_hybrid_setting</string>
    <string name="settings_preference_key_notification">key_app_notifications</string>
    <string name="settings_preference_key_other_pref_category_key">pref_key_other_pref_category</string>
    <string name="settings_preference_key_sync_samsung_account">pref_key_sync_samsung_account</string>
    <string name="settings_preference_key_theme">pref_key_theme</string>
    <string name="settings_privacy_notice">Privacy Notice</string>
    <string name="settings_privacy_preference_category_key">pref_category_key_privacy</string>
    <string name="settings_privacy_preference_key_about_news_offers">pref_key_about_news_offers</string>
    <string name="settings_privacy_preference_key_data_processing">pref_key_data_processing</string>
    <string name="settings_privacy_preference_key_marketing_information">key_game_marketting_agreed_time</string>
    <string name="settings_privacy_preference_key_permissions">pref_key_permissions</string>
    <string name="settings_privacy_preference_key_privacy_notice">pref_key_privacy_notice</string>
    <string name="settings_privacy_title">Privacy</string>
    <string name="settings_samsung_account_summary">Sign in to use your gamer profile, see your creature collection, and more.</string>
    <string name="settings_show_game_apps_description">Choose where to show your games.</string>
    <string name="settings_subheader_display_and_notifications">Display and notifications</string>
    <string name="settings_theme_title">Dark mode</string>
    <string name="test_ad">Ad Setting</string>
    <string name="test_ad_force_request_video_summary">Request Ad Video force in common area.</string>
    <string name="test_ad_force_request_video_title">Request Ad Video force</string>
    <string name="test_ad_ignore_request_summary">Ad(AppIcon, Video, GalaxyStore Banner) request will be ignored</string>
    <string name="test_ad_ignore_request_title">Ignore Ad request</string>
    <string name="test_ad_open_lib_setting_title">Open library setting page</string>
    <string name="test_clear_access_token">Clear Access Token</string>
    <string name="test_cloudgame_restore_begin_title">Begin Restore CloudGame</string>
    <string name="test_cloudgame_restore_call_delete_title">Call delete data api after restore</string>
    <string name="test_cloudgame_restore_package_name">Restore CloudGame PackageName</string>
    <string name="test_cloudgame_restore_show_history">Show Restore History</string>
    <string name="test_cloudgame_restore_with_file_open">Restore CloudGame With Open ab file</string>
    <string name="test_current_version">Current version: %1$d</string>
    <string name="test_db_extract_game_apk">Extract Game Apk</string>
    <string name="test_db_open_app_data_folder">Open App Data Folder</string>
    <string name="test_deactivate_test_mode">Deactivate Test Mode</string>
    <string name="test_reset_game_alarm_interval">"Reset Alarm Interval(min) (Warning it's a Temp value when you reboot device you need to re-set)"</string>
    <string name="test_settings_title_clear_cache">Clear cache</string>
    <string name="test_settings_title_clear_data">Clear data</string>
    <string name="test_settings_title_manage_data">Manage storage</string>
    <string name="test_settings_title_version">Version</string>
    <string name="test_state">State Setting</string>
    <string name="test_state_force_app_hidden_dialog_title">Force App Hidden dialog</string>
    <string name="test_state_force_app_update_title">Force App Update</string>
    <string name="test_state_mute_game_guide_title">Mute Game Guide</string>
    <string name="test_state_welcome_tnc_title">Terms and Service</string>
    <string name="test_uninstall_gamelauncher_summary">Rollback to preloaded version</string>
    <string name="test_uninstall_gamelauncher_title">Uninstall GameLauncher</string>
</resources>