<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.PreferenceCategory android:title="@string/test_state" android:key="pref_key_test_state_category">
        <SwitchPreferenceCompat android:title="@string/test_state_welcome_tnc_title" android:key="@string/PREF_KEY_TEST_STATE_WELCOME_TNC" android:summary="@string/test_current_version" />
        <SwitchPreferenceCompat android:title="@string/test_state_mute_game_guide_title" android:key="@string/PREF_KEY_TEST_STATE_MUTE_GAME_GUIDE" />
        <SwitchPreferenceCompat android:title="@string/test_state_force_app_hidden_dialog_title" android:key="@string/PREF_KEY_TEST_STATE_FORCE_APP_HIDDEN_DIALOG" />
        <SwitchPreferenceCompat android:title="@string/test_state_force_app_update_title" android:key="@string/PREF_KEY_TEST_STATE_FORCE_APP_UPDATE" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>