<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/bookmarks" android:title="@string/bookmark_title" android:showAsAction="never" />
    <item android:id="@id/gamebooster" android:title="@string/more_menu_title_game_booster" android:showAsAction="never" />
    <item android:id="@id/gameplugin" android:title="@string/more_menu_title_game_plugins" android:showAsAction="never" />
    <item android:id="@id/game_notification" android:title="@string/more_menu_title_game_notification" android:showAsAction="never" />
    <item android:id="@id/notice" android:title="@string/more_menu_title_notice" android:showAsAction="never" />
    <item android:id="@id/community" android:title="@string/more_menu_title_community" android:showAsAction="never" />
    <item android:id="@id/setting" android:title="@string/more_menu_title_settings" android:showAsAction="never" />
    <item android:id="@id/my_games" android:title="@string/main_home_my_games_card_header" android:showAsAction="never" />
    <item android:id="@id/test_settings" android:title="@string/more_menu_title_test_settings" android:showAsAction="never" />
</menu>