<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.samsung.android.game.gamehome.app.setting.preference.ImageDescriptionPreference android:title="@string/settings_show_game_apps_description" android:selectable="false" android:key="@string/library_settings_preference_key_image_description_dummy" />
    <com.samsung.android.game.gamehome.app.setting.preference.RadioButtonPreference android:title="@string/settings_display_game_apps_both" android:key="@string/library_settings_preference_key_radio_button_first_dummy" />
    <com.samsung.android.game.gamehome.app.setting.preference.RadioButtonPreference android:title="@string/settings_display_game_apps_game_launcher_only" android:key="@string/library_settings_preference_key_radio_button_second_dummy" />
    <com.samsung.android.game.gamehome.app.setting.preference.EmptyPreferenceCategory android:key="@string/settings_preference_key_empty" />
</androidx.preference.PreferenceScreen>