<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_bottom_bar_share" android:id="@id/menu_share" android:visible="false" android:title="@string/detail_share" android:iconTint="@color/basic_actionbar_action_button_icon_color" app:showAsAction="always" />
    <item android:icon="@drawable/ic_bottom_bar_delete" android:id="@id/menu_uninstall" android:visible="false" android:title="@string/library_quick_option_uninstall" android:iconTint="@color/basic_actionbar_action_button_icon_color" app:showAsAction="always" />
    <item android:icon="@drawable/ic_shortcut_white" android:id="@id/menu_add" android:visible="false" android:title="@string/add_shortcut" android:iconTint="@color/basic_actionbar_action_button_icon_color" app:showAsAction="always" />
</menu>